# NSDucking

./: .gitignore  CMakeLists.txt  NSDucking_Spec.md  README.md
.github/workflows/: build.yml
Source/: CurveLibrary.cpp  CurveLibrary.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: CurveSmoke.cpp
